feat: added  components and pages

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,12 +1,12 @@
 .navbar {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  /* width: 100vw;
   height: 100vh;
   overflow: auto;
   padding: 0px;
   min-width: 0px;
-  max-width: none;
+  max-width: none; */
 
   & a {
     margin-inline: 1rem;
