style: Portfolio styles

--- a/src/components/portfolio/Portfolio.module.css
+++ b/src/components/portfolio/Portfolio.module.css
@@ -2,15 +2,17 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  gap: 0.75rem;
+  padding: 0.625rem 0;
+  overflow-x: scroll;
 
   & article {
-    padding: 1rem;
+    padding: 0.75rem;
     outline: 1px solid rgb(38, 38, 38);
-    border-radius: 1rem;
+    border-radius: 16px;
 
     &:hover {
       outline: 1px solid var(--color);
-      border-radius: 1rem;
       transform: translate(0px, -5px);
       transition: transform 0.3s ease-in-out;
     }
@@ -18,13 +20,15 @@
 
   & img,
   p {
-    padding-bottom: 0.5rem;
+    font-size: 0.875rem;
+    line-height: 1.38;
     text-align: center;
     color: var(--secondary-text-color);
+    padding-bottom: 0.5rem;
   }
 
   & p:first-of-type {
-    font-size: 1rem;
+    font-size: 0.75rem;
     color: var(--dark-text-color);
   }
 
