--- a/client/src/components/coinTeaser/CoinTeaser.module.css
+++ b/client/src/components/coinTeaser/CoinTeaser.module.css
@@ -1,5 +1,45 @@
-.table {
-  font-size: 0.5rem;
-  color: var(--secondary-text-color);
+.wrapper{
+  padding: 0.5rem
+
+}
+
+table {
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--main-text-color);
   width: 100%;
+  outline: 1px solid var(--outline-color);
+  border-radius: 16px;
+}
+
+td {
+  padding: 0.75rem 0.25rem;
+}
+
+td > {
+  display: flex;
+  align-items: center;
+}
+
+td:first-child {
+  padding-left: 0.875rem;
+}
+
+td:nth-child(-n + 2) {
+  color: var(--secondary-text-color);
+}
+
+td:nth-child(n + 3) {
+  text-align: right;
+}
+
+td:last-child {
+  padding-right: 0.875rem;
+  padding-left: 2rem;
+}
+
+@media screen and (max-width: 740px) {
+  .chart {
+    display: none;
+  }
 }
