--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -1,4 +1,13 @@
 .footer {
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--secondary-bg-color);
+  padding: 0.75rem;
+  font-size: 0.75rem;
+  color: var(--secondary-text-color);
+   
+  & img {
+    margin-left: 0.5rem;
+  }
 }
