--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -7,7 +7,7 @@
 
 :root {
   --main-bg-color: rgb(0, 0, 0);
-  --secondary-bg-color: rgb(39, 42, 42);
+  --secondary-bg-color: rgb(13, 13, 13);
   --main-text-color: rgb(255, 255, 255);
   --secondary-text-color: rgb(179, 179, 179);
   --dark-text-color: rgb(102, 102, 102);
@@ -17,7 +17,7 @@
   --red-color: rgb(255, 77, 77);
 
   --CS1Color: #ffb347;
-  --CS2Color: #ff9332;
+  --CS2Color: rgb(255, 147, 50);
   --CS3Color: #ea5237;
   --RedLightColor: #f02934;
   --GreenLightColor: #34b349;
@@ -79,16 +79,25 @@ h1 {
   font-size: 2.5rem;
   font-weight: bold;
   line-height: 1.24;
+  letter-spacing: 0;
 }
 
 h2 {
-  font-size: 1.25rem;
+  font-size: 2rem;
   font-weight: 700;
+  line-height: 42px;
+  letter-spacing: 0;
+}
+
+h3 {
+  font-size: 1.125rem;
+  font-weight: 500;
   line-height: 1.5;
+  letter-spacing: 0;
 }
 
 p {
-  font-size: 0.8;
+  font-size: 0.875rem;
   font-weight: 400;
   color: var(--secondary-text-color);
 }
