--- a/client/src/components/hero/Hero.module.css
+++ b/client/src/components/hero/Hero.module.css
@@ -1,6 +1,8 @@
 .hero {
-  padding: 1.25rem;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 600px;
+  padding: 1.25rem;
   text-align: center;
 
   & h1 {
