--- a/client/src/components/portfolio/Portfolio.module.css
+++ b/client/src/components/portfolio/Portfolio.module.css
@@ -1,10 +1,9 @@
 .portfolio {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   gap: 0.75rem;
-  padding: 0.625rem 0;
-  overflow-x: scroll;
+  padding-bottom: 2rem;
 
   & article {
     padding: 0.75rem;
