--- a/client/src/features/coinsTable/CoinsTable.module.css
+++ b/client/src/features/coinsTable/CoinsTable.module.css
@@ -2,6 +2,7 @@
   max-width: 37.5rem;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 2rem;
   padding: 0.5rem;
 }
 
@@ -46,19 +47,6 @@ td:nth-child(n + 3) {
   text-align: right;
 }
 
-button {
-  background: none;
-  margin: 1rem 0.5rem;
-  padding: 0.5rem 1.25rem;
-  outline: solid 1px var(--outline-color);
-  border-radius: 16px;
-  color: var(--primary-text-color);
-  font-size: 0.75rem;
-  font-weight: 500;
-  cursor: pointer;
-  text-align: center;
-}
-
 img {
   padding-right: 0.5rem;
 }
@@ -73,11 +61,6 @@ img {
 
 .tableHeader {
   display: none;
-}
-
-.linkButton_wrapper {
-  display: flex;
-  justify-content: center;
 }
 
 @media screen and (min-width: 740px) {
