--- a/client/src/components/ui/button/Button.module.css
+++ b/client/src/components/ui/button/Button.module.css
@@ -1,10 +1,10 @@
 .btn_primary {
-  background: none;
   margin: 1rem 0.5rem;
   padding: 0.5rem 1.25rem;
   outline: solid 1px var(--outline-color);
   border-radius: 16px;
-  color: var(--primary-text-color);
+  background-color: var(--light-bg-color);
+  color: var(--main-text-color);
   font-size: 0.75rem;
   font-weight: 500;
   cursor: pointer;
