--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -52,6 +52,49 @@ p {
   color: var(--secondary-text-color);
 }
 
+form legend {
+  font-size: 2rem;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0;
+  color: var(--main-text-color);
+  text-transform: capitalize;
+  margin-bottom: 1rem;
+}
+
+form label {
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0;
+  color: var(--secondary-text-color);
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+form input {
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0px;
+  color: var(--main-text-color);
+  padding: 1.5rem 0.5rem;
+  border: 1px solid var(--outline-color);
+  border-radius: 0.75rem;
+  background: var(--main-bg-color);
+  overflow: hidden;
+  width: 100%;
+  height: 2rem;
+}
+
+form input:focus {
+  background: var(--main-bg-color);
+  border: 1px solid var(--orange-color);
+}
+
+form button {
+  background-color: var(--orange-color);
+}
+
 a {
   text-decoration: none;
   color: inherit;
