--- a/client/src/features/userAuth/UserStatusForm.module.css
+++ b/client/src/features/userAuth/UserStatusForm.module.css
@@ -6,6 +6,28 @@
     width: 100%;
     margin-bottom: 1rem;
   }
+}
 
+.user_panel {
+  position: absolute;
+  top: 3rem;
+  width: 10rem;
+  border: 1px solid var(--outline-color);
+  border-radius: 0 0 0.5rem 0.5rem;
+  padding: 0.5rem;
+  background-color: var(--light-bg-color);
+  
+  & div, button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 0.75rem;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: var(--secondary-text-color);
 
+    &:hover {
+      color: var(--main-text-color);
+    }
+  }
 }
