--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -14,6 +14,7 @@
   --dark-text-color: rgb(102, 102, 102);
   --outline-color: rgb(38, 38, 38);
   --orange-color: #ff9332;
+  --light-orange-color: #ff9332;
   --green-color: #6ccf59;
   --red-color: #ff4d4d;
 }
