--- a/client/src/components/hero/Hero.module.css
+++ b/client/src/components/hero/Hero.module.css
@@ -2,7 +2,7 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 600px;
-  padding: 1.25rem;
+  padding: 4rem 1.25rem 1.25rem;
   text-align: center;
 
   & h1 {
@@ -16,9 +16,4 @@
     margin-bottom: 1.25rem;
   }
 }
-/* 
-.linkButton_wrapper {
-  display: flex;
-  justify-content: center;
-} */
 
