--- a/client/src/components/navbar/Navbar.module.css
+++ b/client/src/components/navbar/Navbar.module.css
@@ -5,10 +5,16 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   max-width: 37.5rem;
   margin: 0 auto;
+  align-items: center;
   gap: 1rem;
+
+  & section {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 
   & a {
     display: flex;
