--- a/client/src/features/userAuth/UserStatusForm.module.css
+++ b/client/src/features/userAuth/UserStatusForm.module.css
@@ -19,7 +19,7 @@
     &:hover {
       color: var(--orange-color);
     }
-  } 
+  }
 }
 
 .user_panel {
@@ -40,6 +40,7 @@
     font-size: 1.25rem;
     font-weight: 500;
     color: var(--secondary-text-color);
+    cursor: pointer;
 
     &:hover {
       color: var(--main-text-color);
