--- a/client/src/components/portfolio/Portfolio.module.css
+++ b/client/src/components/portfolio/Portfolio.module.css
@@ -5,7 +5,7 @@
   gap: 0.75rem;
   padding-bottom: 2rem;
 
-  & article {
+  & a {
     padding: 0.75rem;
     outline: 1px solid var(--outline-color);
     border-radius: 16px;
@@ -32,8 +32,6 @@
   }
 
   & span {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: normal;
+    vertical-align: text-bottom;
   }
 }
