--- a/client/src/components/footer/Footer.module.css
+++ b/client/src/components/footer/Footer.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-grow: 1;
   background-color: var(--secondary-bg-color);
   padding: 1rem;
   font-size: 0.75rem;
