--- a/client/src/components/CoinDetails/CoinDetails.module.css
+++ b/client/src/components/CoinDetails/CoinDetails.module.css
@@ -1,3 +1,11 @@
 .coin_details {
-  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .coin_details {
+   
+  }
 }
