--- a/client/src/components/ui/button/Button.module.css
+++ b/client/src/components/ui/button/Button.module.css
@@ -1,6 +1,6 @@
 .btn {
   cursor: pointer;
-  outline: solid 1px var(--outline-color);
+  outline: solid 2px var(--outline-color);
   border-radius: 16px;
   margin: 1rem 0.5rem;
   padding: 0.5rem 1.25rem;
@@ -19,7 +19,7 @@
   }
 
   &:focus {
-    border: solid 2px var(--main-bg-color);
+    outline: solid 2px var(--main-bg-color);
   }
 }
 
@@ -33,7 +33,7 @@
   }
 
   &:focus {
-    border: solid 2px var(--main-bg-color);
+    outline: solid 2px var(--main-bg-color);
     background-color: var(--light-orange-color);
     color: var(--main-text-color);
   }
